[tool.poetry]
name = "mwc-pedprog-unit01-lab03"
version = "0.1.0"
description = ""
authors = ["Chris <github.com@accounts.chrisproctor.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
